# SC2Bot

./: .gitattributes  .gitignore  HowToSetup.md  README.md  action_selection.csv  action_selection_queue_lenght.csv  avg_calc.py  better_human.py  docker-compose.yml  exploration.csv  human_result.csv  mcts_runner.py  requirements.txt  result.csv  result1.csv  result2.csv  result_experimtn_crash.csv  result_first_iteration.csv  result_saver.py  rollout end time.csv  run.py  run_games.py  sc2_mcts.pyi  state_translator.py  testbot.py  value_heuristic.csv  worker_manager.py
Actions/: BuildBase.py  VespeneExtractor.py  build_baracks.py  build_barracks.py  build_supply.py  build_worker.py
Modules/: result_saver.py  state_translator.py  worker_manager.py
Python/: battle_bot.py  better_human.py  run.py  sc2_mcts.pyi  testbot.py
Python/Actions/: BuildBase.py  VespeneExtractor.py  build_barracks.py  build_factory.py  build_marine.py  build_starport.py  build_structure_helper.py  build_supply.py  build_tank.py  build_unit_helper.py  build_viking.py  build_worker.py  scoutmanager.py
Python/CombatScripts/: siege_tank_combat.py  viking_fighter_combat.py
Python/Modules/: army_manager.py  information_manager.py  map_analyzer.py  result_saver.py  scoutmanager.py  state_translator.py  worker_manager.py
cpp_modules/: .gitignore  CMakeLists.txt  Dockerfile  HowToSetup.md  docker-compose.yml  entrypoint.sh  module_test.py
cpp_modules/Doctest_tests/: CMakeLists.txt  Sc2StateTest.cpp
cpp_modules/module_test/: module_test.py
cpp_modules/src/: CMakeLists.txt
cpp_modules/src/benchmarks/: mcts_benchmark.cpp
cpp_modules/src/graphs/: graph_data.cpp
cpp_modules/src/mcts/: ActionEnum.h  Mcts.cpp  Mcts.h  MctsMeta.h  Node.h  RolloutHeuristicEnum.h  Ucb1Normal2.cpp  Ucb1Normal2.h  UnitPower.h  ValueHeuristicEnum.h
cpp_modules/src/module/: Module.cpp
cpp_modules/src/sc2_state/: Base.h  Construction.cpp  Construction.h  Sc2Constants.h  Sc2State.cpp  Sc2State.h  UnitPower.h
cpp_modules/src/sc2_state/enemy/: Enemy.cpp  Enemy.h  ProductionBuildings.h  UnitTypes.h
cpp_modules/src/tests/: MctsTest.cpp  Sc2StateTest.cpp
data/: .~lock.micro_arena.csv#  arena_model.pt  arena_model.pth  combinedResults.csv  combinedResults.ods  data_processing.py  micro_arena.7z  micro_arena.csv  protoss_arena_model.pt  protoss_arena_model.pth  protoss_micro_arena.csv  result_averages.csv  result_proccessing.py  terran_arena_model.pt  terran_arena_model.pth  terran_micro_arena.csv  zerg_arena_model.pt  zerg_arena_model.pth  zerg_micro_arena.csv
data/match_results/: 0_averagePower.csv  0_marinePower.csv  0_minPower.csv  0_scaledPower.csv  1_averagePower.csv  1_marinePower.csv  1_minPower.csv  1_scaledPower.csv  2_averagePower.csv  2_marinePower.csv  2_minPower.csv  2_scaledPower.csv
sc2/: units.py
